--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,17 +30,11 @@ test_script:
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=netstandard2.1 /warnaserror /nr:false /v:m
 - git clean -dxf tests
-- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp1.0 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /nr:false /v:m
-- git clean -dxf tests
-- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp1.1 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /nr:false /v:m
-- git clean -dxf tests
-- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp2.0 /warnaserror /nr:false /v:m
-- git clean -dxf tests
-- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp2.1 /warnaserror /nr:false /v:m
-- git clean -dxf tests
-- msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.0 /warnaserror /nr:false /v:m
-- git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.1 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFM /p:TestFramework=net5.0 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFM /p:TestFramework=net6.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/WPF /warnaserror /nr:false /v:m
 
@@ -61,17 +55,11 @@ test_script:
 - git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netstandard2.1 -warnaserror -nr:false -v:m
 - git clean -dxf tests
-- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp1.0 -p:DisableImplicitNuGetFallbackFolder=true -warnaserror -nr:false -v:m
-- git clean -dxf tests
-- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp1.1 -p:DisableImplicitNuGetFallbackFolder=true -warnaserror -nr:false -v:m
-- git clean -dxf tests
-- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp2.0 -warnaserror -nr:false -v:m
-- git clean -dxf tests
-- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp2.1 -warnaserror -nr:false -v:m
-- git clean -dxf tests
-- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.0 -warnaserror -nr:false -v:m
-- git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.1 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=net5.0 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFM -p:TestFramework=net6.0 -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/WPF -warnaserror -nr:false -v:m
 artifacts:
